[gd_scene load_steps=2 format=2]

[ext_resource path="res://battletest.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 70.0
margin_right = 100.0
margin_bottom = 282.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
text = "str"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button" groups=[
"statlabeltest",
]]
margin_left = 93.0
margin_top = -1.0
margin_right = 177.0
margin_bottom = 18.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 44.0
text = "atk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button2" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 90.0
margin_bottom = 68.0
text = "def"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button3" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 90.0
margin_bottom = 92.0
text = "defprot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button4" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 90.0
margin_bottom = 116.0
text = "crit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button5" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 90.0
margin_bottom = 140.0
text = "luck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button6" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 90.0
margin_bottom = 164.0
text = "basehp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button7" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 90.0
margin_bottom = 188.0
text = "hp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button8" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 90.0
margin_bottom = 212.0
text = "basedmg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Button9" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 150.0
margin_top = 70.0
margin_right = 240.0
margin_bottom = 282.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer2"]
margin_right = 90.0
margin_bottom = 20.0
text = "e_str"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button" groups=[
"statlabeltest",
]]
margin_left = 93.0
margin_top = -1.0
margin_right = 177.0
margin_bottom = 17.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 44.0
text = "e_atk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button2" groups=[
"statlabeltest",
]]
margin_left = 93.0
margin_top = -1.0
margin_right = 177.0
margin_bottom = 19.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="VBoxContainer2"]
margin_top = 48.0
margin_right = 90.0
margin_bottom = 68.0
text = "e_def"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button3" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.97194
margin_right = 177.199
margin_bottom = 23.0281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="VBoxContainer2"]
margin_top = 72.0
margin_right = 90.0
margin_bottom = 92.0
text = "e_defprot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button4" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="VBoxContainer2"]
margin_top = 96.0
margin_right = 90.0
margin_bottom = 116.0
text = "e_crit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button5" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="VBoxContainer2"]
margin_top = 120.0
margin_right = 90.0
margin_bottom = 140.0
text = "e_luck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button6" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -2.31285
margin_right = 177.199
margin_bottom = 22.6872
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="VBoxContainer2"]
margin_top = 144.0
margin_right = 90.0
margin_bottom = 164.0
text = "e_basehp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button7" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="VBoxContainer2"]
margin_top = 168.0
margin_right = 90.0
margin_bottom = 188.0
text = "e_hp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button8" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="VBoxContainer2"]
margin_top = 192.0
margin_right = 90.0
margin_bottom = 212.0
text = "e_basedmg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Button9" groups=[
"statlabeltest",
]]
margin_left = 93.1992
margin_top = -1.47194
margin_right = 177.199
margin_bottom = 23.5281
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 13.0
margin_right = 312.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 70.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
text = "1"

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
text = "10"

[node name="Button3" type="Button" parent="HBoxContainer"]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
text = "100"

[node name="Button4" type="Button" parent="HBoxContainer"]
margin_left = 222.0
margin_right = 292.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 0 )
text = "sign"

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 296.0
margin_top = 2.0
margin_right = 366.0
margin_bottom = 32.0
rect_min_size = Vector2( 70, 30 )

[node name="Label" type="Label" parent="HBoxContainer/Label"]
margin_top = -15.0
margin_right = 51.0
margin_bottom = -1.0
text = "Amount"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 39.2438
margin_top = 299.68
margin_right = 217.244
margin_bottom = 340.68
text = "Fight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 148.0
margin_top = 48.0
margin_right = 237.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 46.0
margin_top = 48.0
margin_right = 106.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 9.0
margin_top = 49.0
margin_right = 43.0
margin_bottom = 69.0
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed" binds= [ "str" ]]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button_pressed" binds= [ "atk" ]]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button_pressed" binds= [ "def" ]]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Button_pressed" binds= [ "defprot" ]]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_Button_pressed" binds= [ "crit" ]]
[connection signal="pressed" from="VBoxContainer/Button6" to="." method="_on_Button_pressed" binds= [ "luck" ]]
[connection signal="pressed" from="VBoxContainer/Button7" to="." method="_on_Button_pressed" binds= [ "basehp" ]]
[connection signal="pressed" from="VBoxContainer/Button8" to="." method="_on_Button_pressed" binds= [ "hp" ]]
[connection signal="pressed" from="VBoxContainer/Button9" to="." method="_on_Button_pressed" binds= [ "basedmg" ]]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_Button_pressed" binds= [ "estr" ]]
[connection signal="pressed" from="VBoxContainer2/Button2" to="." method="_on_Button_pressed" binds= [ "eatk" ]]
[connection signal="pressed" from="VBoxContainer2/Button3" to="." method="_on_Button_pressed" binds= [ "edef" ]]
[connection signal="pressed" from="VBoxContainer2/Button4" to="." method="_on_Button_pressed" binds= [ "edefprot" ]]
[connection signal="pressed" from="VBoxContainer2/Button5" to="." method="_on_Button_pressed" binds= [ "ecrit" ]]
[connection signal="pressed" from="VBoxContainer2/Button6" to="." method="_on_Button_pressed" binds= [ "eluck" ]]
[connection signal="pressed" from="VBoxContainer2/Button7" to="." method="_on_Button_pressed" binds= [ "ebasehp" ]]
[connection signal="pressed" from="VBoxContainer2/Button8" to="." method="_on_Button_pressed" binds= [ "ehp" ]]
[connection signal="pressed" from="VBoxContainer2/Button9" to="." method="_on_Button_pressed" binds= [ "ebasedmg" ]]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button1_pressed" binds= [ "1" ]]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button1_pressed" binds= [ "10" ]]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button1_pressed" binds= [ "100" ]]
[connection signal="pressed" from="HBoxContainer/Button4" to="." method="_on_Button1_pressed" binds= [ "sign" ]]
[connection signal="pressed" from="Button" to="." method="_on_Button2_pressed"]
